fix: Member profile alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -267,7 +267,7 @@ input {
 .height-member-activity {
   height: calc(100vh - 44.5rem);
   /* min-height: 150px; */
-  max-height: 300px;
+  max-height: 241px;
 }
 
 .member-section::-webkit-scrollbar {
